<resources>
    <string name="app_name">quizme</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_a_genre">Choose A Genre</string>
    <string name="_1">1</string>
    <string name="game_over">Game Over</string>
    <string name="you_played_for_genre">You Played For Genre</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="home">Home</string>
    <string name="leave_now">LEAVE NOW</string>
    <string name="genre">GENRE:</string>
    <string name="_00_00_00_00_00_00">00 00 00 00:00:00</string>
    <string name="date">DATE:</string>
    <string name="quizme">QuizMe!</string>
    <string name="question">Question</string>
    <string name="optA">Option A</string>
    <string name="submit">SUBMIT</string>
    <string name="next">next</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="sign_out">Sign Out</string>
</resources>