<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:src="@drawable/quiz_logo"/>
    <EditText
        android:id="@+id/userNameRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress|text"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/nameRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_name"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/ageRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:inputType="number"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/passwordRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/cnfPasswordRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:minHeight="48dp"
        android:inputType="textVisiblePassword"/>
    <Button
        android:id="@+id/btn_signupRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>
</LinearLayout>