<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".GameOverActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginTop="50sp"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/game_over"/>
    <LinearLayout
        android:id="@+id/llGenreGa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/you_played_for_genre"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/setGenreGA"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text=""
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llScoreGa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:text="@string/score"
        android:layout_gravity="center"
        android:textStyle="bold"/>
        <TextView

            android:id="@+id/setScoreGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/_0"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RestartGA"
        android:layout_marginTop="40dp"
        android:layout_margin="10dp"
        android:text="@string/try_again"
        android:backgroundTint="#54BAB9"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeGA"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:backgroundTint="#59CE8F"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/leave_now"
        android:backgroundTint="#FF1E00"
        android:id="@+id/exitGA"/>

</LinearLayout>