<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/iv_quizme"
        android:src="@drawable/quiz_logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="30dp"/>
    <EditText
        android:id="@+id/et_userNameLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress|text"/>
    <EditText
        android:id="@+id/et_passwordLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textVisiblePassword"/>
    <Button
        android:id="@+id/btn_loginLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:textSize="16sp"
        android:backgroundTint="@color/teal_700"
        android:textStyle="bold"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_registerLA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="15sp"
            android:backgroundTint="@color/teal_700"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btn_forgotPasswordLA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="15.5sp"
            android:backgroundTint="@color/teal_700"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl1LA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            />
    </RelativeLayout>
</LinearLayout>