<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_gravity="center"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    tools:context=".HistoryItemActivity">
    <RelativeLayout
        android:id="@+id/relHI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivHistoryItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/quiz_logo"/>
        <TextView
            android:id="@+id/tvGenreHI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivHistoryItem"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:text="@string/genre"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvScoreHI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivHistoryItem"
            android:layout_below="@id/tvGenreHI"
            android:layout_margin="5dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:text="@string/score"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDateHI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivHistoryItem"
            android:layout_below="@id/tvScoreHI"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvDateHI"
            android:layout_below="@id/tvScoreHI"
            android:paddingTop="8dp"
            android:text="@string/_00_00_00_00_00_00"
            android:textStyle="bold"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>